# zefirs-flashy-cooler

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .taurignore  Cargo.toml  README.md  app.config.js  app.config.json  build.rs  device.html  forge.config.js  index.html  log.txt  log2.txt  logs.txt  main.js  main.py  manifest.xml  package-lock.json  package.json  renderer.html  rust-toolchain.toml  settings.html  startup.js  svelte.config.js  tauri.conf.json  vite.config.ts
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  device_request.md
.github/workflows/: build-from-push.yml  code-quality.yml  code-style.yml  nightly.yml  sponsors.yml  tests.yml
LibreHardwareMonitorNative/: Class1.cs  LibreHardwareMonitorNative.csproj  LibreHardwareMonitorNative.sln  Monitor.cs
assets/scripts/: device.js  loading.js  renderer.js  settings.js  themes.js
assets/styles/: device.css  loading.css  onboarding.css  renderer.css  settings.css  styles.css  themes.css
assets/ui/: device.html  loading.html  onboarding.html  renderer.html  settings.html  themes.html
crates/dotnetaot-build/: Cargo.toml
crates/lcd-coolers/: Cargo.toml
crates/lcd-coolers/src/: lib.rs
crates/lcd-coolers/src/corsair/: mod.rs
crates/lcd-coolers/src/corsair/h150i/: constants.rs  counter.rs  creator.rs  device.rs  mod.rs  tests.rs
crates/lcd-coolers/src/finder/: create.rs  mod.rs
crates/lcd-coolers/src/info/: mod.rs
crates/lcd-coolers/src/traits/: device_creator.rs  display_cooler.rs  mod.rs
crates/librehardwaremonitor-rs/: Cargo.toml  build.rs
crates/librehardwaremonitor-sys/: Cargo.toml  build.rs
crates/smol-static/: Cargo.toml
crates/ultralight/: .gitignore  Cargo.toml  build.rs
crates/ultralight-build/: .gitignore  Cargo.toml
crates/ultralight-build/src/: lib.rs
crates/ultralight-sys/: .gitignore  Cargo.toml  build.rs
crates/ultralight-sys/src/: lib.rs
crates/ultralight-sys/wrapped/: wrapper.h
crates/ultralight/shaders/path/: fill.hlsl  fill_path.hlsl
crates/ultralight/src/: lib.rs  string.rs
crates/ultralight/src/js/: context.rs  function.rs  internal_string.rs  mod.rs  object.rs  types.rs  value.rs
crates/ultralight/src/platform/: logger.rs  mod.rs  tests.rs
crates/ultralight/src/platform/gpu/: driver_trait.rs  mod.rs  receiver.rs  shaders.rs
crates/ultralight/src/renderer/: builder.rs  impl.rs  mod.rs  tests.rs
crates/ultralight/src/types/: error.rs  face_winding.rs  font_hinting.rs  log_level.rs  mod.rs
crates/ultralight/src/types/bitmap/: format.rs  impl.rs  mod.rs  pixels.rs
crates/ultralight/src/types/gpu/: gpu_command.rs  gpu_state.rs  index_buffer.rs  mod.rs  rect.rs  render_buffer.rs  shader_type.rs  ul_arr_macro.rs  vertex_buffer.rs  worker_command.rs
crates/ultralight/src/types/surface/: impl.rs  mod.rs
crates/ultralight/src/view/: builder.rs  guard.rs  impl.rs  load_future.rs  mod.rs  tests.rs
devices-src/capellix/: Cargo.toml  README.md  capellix.node  package.json
devices-src/capellixv2/: Cargo.toml  package.json
devices-src/capellixv2/resources/: device.manifest.js
devices-src/capellixv2/src/: constants.rs
devices-src/kraken/: Cargo.toml  README.md  package.json
devices-src/kraken/resources/: device.manifest.js
devices-src/kraken/src/: lib.rs  statics.rs
devices-src/tt-ultra/: .gitignore  Cargo.toml  README.md  package.json
frontend/: .eslintrc.cjs  .prettierrc  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.ts  theme.ts  vite.config.ts
frontend/src/: app.html
icons/: icon.icns
includes/: lcd.py
libraries/: capellix.js  display.js  lcd.py  loadingPreload.js  preload.js  render.py  renderer.js  sensors.js  sensors.py  theme.py
resources/: default.html
scripts/: build.ps1  create-clean-build-publish.ps1  create-clean-build.ps1
src/: app.d.ts  app.html  capellix.rs  lib.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  Makefile.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/shader_cache/: fill.cached  path.cached  shader_binaries.json
src-tauri/src/: main.rs
src-tauri/src/app_ops/: lifecycle.rs
src-tauri/src/config/: config.rs  ensure_dirs.rs
src-tauri/src/file_server/: default_page.html  fs.rs  server.rs
src-tauri/src/frontend/: basic_ops.rs  settings.rs  themes.rs  tray.rs  window.rs
src-tauri/src/helpers/: threading.rs  traits.rs
src-tauri/src/macros/: .gitignore  Cargo.toml
src-tauri/src/macros/src/: lib.rs
src-tauri/src/rendering/: threading.rs
src-tauri/src/rendering/devices/: device.rs
src-tauri/src/rendering/devices/capellix/: constants.rs  device.rs
src-tauri/src/rendering/devices/streamdeck_xl/: device.rs
src-tauri/src/rendering/devices/thermaltake/: constants.rs  device.rs
src-tauri/src/rendering/ultralight/: bitmap.rs  driver.rs  engine.rs  gpu.rs  tex.rs  vulkan.rs
src-tauri/src/rendering/ultralight/shaders/: fill_frag.frag  fill_frag.glsl  path_frag.frag  path_frag.glsl  v2f_c4f_t2f_t2f_d28f_vert.glsl  v2f_c4f_t2f_t2f_d28f_vert.vert  v2f_c4f_t2f_vert.glsl  v2f_c4f_t2f_vert.vert
src-tauri/src/sensors/: sensors.rs
src-tauri/src/services/: service.rs
src/components/: Chip.svelte  FeaturedThemePanel.svelte  FeaturedThemes.svelte  HeadingRendererMd.svelte  NavigationCircle.svelte  SearchBar.svelte  ServiceOption.svelte  ThemeCard.svelte  ThemeCarousel.svelte  ThemeDownload.svelte
src/helpers/: clickOutside.js  clickOutside.ts  ghApi.ts  sleep.ts  stores.ts  themeTools.ts
src/lifecycle/: exit.rs  mod.rs  setup.rs
src/routes/: +layout.scss  +layout.svelte  +layout.ts  +page.scss  +page.svelte  background.css
src/services/: mod.rs
src/styles/: mixins.scss
src/themes/: config.rs  get_all.rs  mod.rs  now_playing.rs  play.rs  validate.rs
src/utils/: mod.rs
static/images/: site.webmanifest
stock_themes/clock/: theme.js
stock_themes/static_image/: theme.js
themes/clock/: config.json  theme.js
themes/cpu_temp/: theme.js
themes/gif/: config.json  theme.js
themes/hexagon_stuff/: config.json  theme.js
themes/notzxt/: config.json  (+1 more)
(+127 files in other folders)
