[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Bruno St John"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [] }
tokio = { version = "1.35.0", features = ["full"] }
windows = { version = "0.52.0", features = ["Win32_Foundation"] }
sevenz-rust = "0.5.3"

[features]
custom-protocol = [ "tauri/custom-protocol" ]

[workspace]
members = ["crates/*"]
