[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Bruno St John"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
dotnetaot-build = { path = "./crates/dotnetaot-build" }
anyhow = "1.0.75"
ultralight-build = { path = "./crates/ultralight-build" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [
    "path-all",
    "fs-read-file",
    "protocol-asset",
    "fs-read-dir",
    "shell-open",
    "window-unmaximize",
    "window-unminimize",
    "window-minimize",
    "window-close",
    "window-maximize",
    "window-start-dragging",
    "window-show",
    "window-hide",
    "system-tray",
] }
tokio = { version = "1.35.0", features = ["full"] }
windows = { version = "0.52.0", features = ["Win32_Foundation"] }
sevenz-rust = "0.5.3"
window-shadows = "0.2.2"
anyhow = "1.0.75"
ultralight = { path = "./crates/ultralight" }
lcd-coolers = { path = "./crates/lcd-coolers" }
librehardwaremonitor-rs = { path = "./crates/librehardwaremonitor-rs" }
tachyonix = "0.2.1"
smol-static = { path = "./crates/smol-static" }
confy = "0.5.1"
tauri-plugin-context-menu = "0.6.1"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "^0.4"
bincode = "1.3.3"
discord-sdk = "0.3.5"
async-trait = "0.1.74"


[features]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = ["crates/*"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
debug = false
panic = "abort"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
debug = false
