[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }
sevenz-rust = { version = "0.2" }
reqwest = { version = "0.11.18", features = ["blocking", "stream"] }
zip-extract = "0.1.2"
cc = "1.0.79"

[dev-dependencies]
rand = "0.8.5"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = [
    "dialog",
    "fs-read-dir",
    "fs-read-file",
    "path-all",
    "protocol-asset",
    "system-tray",
    "updater",
    "window-close",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-show",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize",
] }
window-vibrancy = "0.3.2"
window-shadows = "0.2.1"
tauri-plugin-window-state = "0.1.0"
base64 = "0.21.2"
turbojpeg = { version = "0.5.2", features = ["image"] }
image = "0.24.6"
flate2 = "1.0.26"
infer = "0.13.0"
mime_guess = "2.0.4"
color-thief = "0.2.2"
reqwest = { version = "0.11.18", features = ["blocking", "stream"] }
urlencoding = "2.1.2"
futures-util = "0.3.28"
ul-sys = { git = "https://github.com/brunostjohn/ul-sys" }
uuid = { version = "1.3.4", features = ["v4"] }
macros = { version = "0.1.0", path = "src/macros" }
whoami = "1.4.1"
once_cell = "1.18.0"
thiserror = "1.0.43"
glium = "0.32.1"
windows = { version = "0.48.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
kanal = "0.1.0-pre8"
tracing = "0.1.37"
rayon = "1.7.0"
nohash-hasher = "0.2.0"
heapless = "0.7.16"
hidapi = { git = "https://github.com/sidit77/hidapi-rs.git", features = [
    "windows-native",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
only-ul-deps = ["ul-sys/only-ul-deps"]

[profile.dev]
debug = true

[profile.release-clean]
inherits = "release"
lto = true
opt-level = 3
incremental = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release]
lto = true
opt-level = 3
incremental = false
panic = "abort"
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
incremental = true

[profile.release.build-override]
opt-level = 3
incremental = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.release-with-debug.package."*"]
opt-level = 3
incremental = true
debug = true
