[package]
name = "lcd-coolers"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
anyhow = "1.0.75"
hidapi = {git="https://github.com/ruabmbua/hidapi-rs.git", features=["windows-native"]}
tokio = { version = "1.35.0", features = ["rt-multi-thread"] }
turbojpeg = "0.5.4"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["full"] }
