[package]
name = "ultralight-build"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A build tool helper for Ultralight crates."
homepage = "https://github.com/brunostjohn/zefirs-flashy-cooler"


[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
sevenz-rust = "0.5.3"
