[package]
name = "capellixv2"
version = "0.1.0"
description = "Native bindings for the Capellix LCD rev2."
authors = ["Bruno St. John"]
license = "Apache-2.0"
edition = "2018"
exclude = ["capellixv2.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi-rusb = "1.3.2"
base64 = "0.21.0"
once_cell = "1.17.1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
